--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,8 +6,8 @@ application.name=weather-top
 # ~~~~~
 # Set to dev to enable instant reloading and other development help.
 # Otherwise set to prod.
-#application.mode=dev
-prod.application.mode=prod
+application.mode=dev
+%prod.application.mode=prod
 
 # Secret key
 # ~~~~~
@@ -84,9 +84,7 @@ date.format=yyyy-MM-dd
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
 
-db=postgres://glawtppl:ziVpRb3HSQDypG6aPno7XvFF2IDXwJKl@tyke.db.elephantsql.com/glawtppl
-jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-jpa.ddl=update
+db.default=mem
 
 #
 # To connect to a local MySQL5 database, use:
